--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,10 @@ plugins {
 android {
     namespace 'com.flutter.my_application'
     compileSdk 32
-
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
     defaultConfig {
         applicationId "com.flutter.my_application"
         minSdk 24
@@ -33,7 +36,7 @@ android {
 
 dependencies {
     implementation project(':flutter')
-    implementation project(':flutter_boost')
+//    implementation project(':flutter_boost')
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
