--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,5 @@
+import org.gradle.api.initialization.resolve.RepositoriesMode
+
 pluginManagement {
     repositories {
         gradlePluginPortal()
@@ -5,13 +7,13 @@ pluginManagement {
         mavenCentral()
     }
 }
-//dependencyResolutionManagement {
-//    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
-//    repositories {
-//        google()
-//        mavenCentral()
-//    }
-//}
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.PREFER_PROJECT)
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
 rootProject.name = "My_Application"
 include ':app'
 setBinding(new Binding([gradle: this]))
@@ -19,5 +21,5 @@ evaluate(new File(
         settingsDir.parentFile,
         'my_flutter/.android/include_flutter.groovy'
 ))
-include ':my_flutter'
-project(':my_flutter').projectDir = new File('../my_flutter')
+//include ':my_flutter'
+//project(':my_flutter').projectDir = new File('../my_flutter')
